# Linked-List

./: CMakeLists.txt  DLL.cpp  DLL.hpp  DNode.cpp  DNode.hpp  ListofTasks.txt  MainDLL.cpp  NewTaskList.txt  Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp
